--- a/src/pages/DesktopHomepage.css
+++ b/src/pages/DesktopHomepage.css
@@ -3,6 +3,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-content: center;
+    align-items: stretch;
     gap: 1vw;
+    height: 95vh;
+    max-height: 95vh;
 }
